[gd_scene load_steps=14 format=3 uid="uid://qd8jrrgru4jl"]

[ext_resource type="Script" path="res://addons/sprite_cutter/AtlasScene.gd" id="1_ti4jq"]
[ext_resource type="Texture2D" uid="uid://dnlo2f2x58ih0" path="res://pictures/room2 (1).png" id="2_ybgwd"]
[ext_resource type="PackedScene" uid="uid://tnm1nobg8j45" path="res://scenes/player.tscn" id="3_xt5dd"]
[ext_resource type="Script" path="res://scripts/Area2D1.gd" id="4_0hg5t"]
[ext_resource type="Script" path="res://scripts/FlowerPickup.gd" id="4_errly"]
[ext_resource type="Texture2D" uid="uid://bbflgk2h02bym" path="res://pictures/flower.png" id="4_ov2mc"]
[ext_resource type="FontFile" uid="uid://bby4ub4ge7pct" path="res://Pixel Times Bold.ttf" id="7_2jggd"]
[ext_resource type="PackedScene" uid="uid://8cajgwer2tik" path="res://scenes/inventory_item.tscn" id="8_th1u4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_owq1o"]
size = Vector2(3608, 246.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cn43v"]
size = Vector2(39, 994)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o5106"]
size = Vector2(3574, 37.75)

[sub_resource type="CircleShape2D" id="CircleShape2D_0lxdn"]
radius = 81.3019

[sub_resource type="CircleShape2D" id="CircleShape2D_lcqdn"]
radius = 60.208

[node name="Node2D" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -1003.0
offset_top = -399.0
offset_right = 4882.0
offset_bottom = 1670.0
color = Color(0.584314, 0.584314, 0.584314, 1)

[node name="AtlasScene" type="Node" parent="."]
script = ExtResource("1_ti4jq")

[node name="Sprite2D" type="Sprite2D" parent="AtlasScene"]
position = Vector2(1810, 500)
scale = Vector2(0.6, 0.6)
texture = ExtResource("2_ybgwd")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
disable_mode = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(1807, 123.75)
shape = SubResource("RectangleShape2D_owq1o")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(19.5, 595)
shape = SubResource("RectangleShape2D_cn43v")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(1816, 1072.88)
shape = SubResource("RectangleShape2D_o5106")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="StaticBody2D"]
z_index = 1
position = Vector2(3600, 577)
shape = SubResource("RectangleShape2D_cn43v")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
script = ExtResource("4_0hg5t")

[node name="Door" type="CollisionShape2D" parent="Area2D"]
z_index = 1
position = Vector2(278, 236)
shape = SubResource("CircleShape2D_0lxdn")

[node name="FlowerPickup" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 4
script = ExtResource("4_errly")

[node name="CollisionShape2D" type="CollisionShape2D" parent="FlowerPickup"]
top_level = true
z_index = 1
position = Vector2(3339, 679)
shape = SubResource("CircleShape2D_lcqdn")

[node name="flower" type="Sprite2D" parent="FlowerPickup"]
top_level = true
visibility_layer = 3
position = Vector2(3333, 682)
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_ov2mc")

[node name="Flower" parent="." instance=ExtResource("8_th1u4")]
z_index = 1
position = Vector2(3338, 678)
scale = Vector2(0.8, 0.8)
item_name = "Роза"
item_description = "Очень знакомая синяя роза"
item_texture = ExtResource("4_ov2mc")

[node name="CharacterBody2D" parent="." instance=ExtResource("3_xt5dd")]
z_index = 1
position = Vector2(285, 291)
scale = Vector2(0.8, 0.8)
collision_layer = 7

[node name="Camera2D" type="Camera2D" parent="CharacterBody2D"]
position = Vector2(4.44446, -53.3333)
limit_left = 6
limit_top = 6
limit_right = 3613
limit_bottom = 1085
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="TextBubble" type="Label" parent="CharacterBody2D"]
offset_left = 32.0
offset_top = -178.0
offset_right = 387.0
offset_bottom = -94.0
theme_override_fonts/font = ExtResource("7_2jggd")
theme_override_font_sizes/font_size = 20
autowrap_mode = 2
visible_characters = 0
visible_ratio = 0.0

[node name="BackBubble" type="ColorRect" parent="CharacterBody2D/TextBubble"]
visible = false
layout_mode = 0
offset_right = 152.0
offset_bottom = 38.0
color = Color(0.466667, 0.466667, 0.466667, 0.721569)

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_body_exited"]
[connection signal="body_entered" from="FlowerPickup" to="FlowerPickup" method="_on_body_entered"]
[connection signal="body_exited" from="FlowerPickup" to="FlowerPickup" method="_on_body_exited"]
